Modify Application controller, swagger, api
